--- a/dev/less/style.less
+++ b/dev/less/style.less
@@ -39,7 +39,6 @@ body {
     color: @text-color;
     font-family: 'Open Sans', Helvetica, sans-serif;
     font-weight: 200;
-    padding-bottom: 75px;
 }
 
 h1, h2, h3, h4, h5 {
@@ -112,7 +111,7 @@ hr {
 
 #container {
     margin: 0 auto;
-    padding: 20px 20px 0;
+    padding: 20px 20px 75px;
 }
 
 
@@ -161,12 +160,9 @@ header {
 
 
 section {
-    margin: 0 0 1500px;
+    margin: 0 0 1000px;
 
-    &:first-of-type {
-        background-color: transparent;
-        border: none;
-    }
+    &:last-child { margin-bottom: 0;}
 }
 
 
